Enhance reading Logic
